personalSetupActivity(editNickname), setupActivity XML 수정 NotificationHistoryActivity 생성,연결

--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -1,163 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".activities.SetupActivity">
 
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        >
     <ImageView
         android:layout_width="415dp"
         android:layout_height="310dp"
         android:translationZ="-10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/login_blue_bg" />
+        app:srcCompat="@drawable/login_blue_bg"
+        />
 
-    <ImageView
-        android:id="@+id/userProfile"
-        android:layout_width="135dp"
-        android:layout_height="135dp"
-        android:layout_marginTop="131dp"
-        android:layout_marginBottom="13dp"
-        android:background="@drawable/profile_image_border"
-        android:padding="10dp"
-        android:translationZ="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/nickname_edit"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/login_blue_user" />
-
-    <EditText
-        android:id="@+id/nickname_edit"
-        android:layout_width="186dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="41dp"
-        android:background="@drawable/edittext_border"
-        android:gravity="center"
-        android:hint="@string/nickname"
-        android:textColor='@color/black'
-        android:textSize="15dp"
-        app:layout_constraintBottom_toTopOf="@+id/set_notification"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userProfile" />
+        <ImageView
+            android:id="@+id/userProfile"
+            android:layout_width="135dp"
+            android:layout_height="135dp"
+            android:background="@drawable/profile_image_border"
+            android:padding="10dp"
+            android:layout_gravity="center"
+            android:translationZ="10dp"
+            android:layout_marginTop="40dp"
+            app:srcCompat="@drawable/login_blue_user" />
+        <EditText
+            android:id="@+id/nickname_edit"
+            android:layout_width="186dp"
+            android:layout_height="40dp"
+            android:background="@drawable/edittext_border"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:hint="@string/nickname"
+            android:layout_marginTop="135dp"
+            android:textColor='@color/black'
+            android:textSize="15dp" />
+    </FrameLayout>
 
 
-    <TextView
-        android:id="@+id/set_notification"
-        android:layout_width="wrap_content"
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="17dp"
-        android:text="알림설정"
-        android:textColor="@color/darkgrey"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/line1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nickname_edit" />
+        android:layout_weight="2">
 
-    <View
+        <TextView
+            android:id="@+id/set_notification"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="10dp"
+            android:text="알림설정"
+            android:layout_marginLeft="20dp"
+            android:textColor="@color/darkgrey"
+            android:textSize="20dp" />
+
+        <View
         android:id="@+id/line1"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_marginBottom="20dp"
-        android:background="@color/app_blue"
-        app:layout_constraintBottom_toTopOf="@+id/push_switch"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/set_notification" />
+        android:background="@color/app_blue" />
 
 
-    <TextView
-        android:id="@+id/push_notification"
-        android:layout_width="0dp"
-        android:layout_height="32dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="63dp"
-        android:layout_marginEnd="212dp"
-        android:layout_marginBottom="67dp"
-        android:text="푸시알림"
-        android:textColor="@color/black"
-        android:textSize="15dp"
-        app:layout_constraintBottom_toBottomOf="@+id/notification_list"
-        app:layout_constraintEnd_toStartOf="@+id/push_switch"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/set_notification" />
+        <TextView
+            android:id="@+id/push_notification"
+            android:layout_width="64dp"
+            android:layout_height="32dp"
+            android:layout_alignBottom="@id/set_notification"
+            android:layout_marginLeft="20dp"
+            android:layout_marginBottom="-44dp"
+            android:text="푸시알림"
+            android:textColor="@color/black"
+            android:textSize="15dp"
+            tools:layout_editor_absoluteX="30dp"
+            tools:layout_editor_absoluteY="423dp" />
 
-    <Switch
-        android:id="@+id/push_switch"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_alignParentRight="true"
-        android:layout_marginEnd="42dp"
-        android:layout_marginBottom="12dp"
-        android:checked="false"
-        android:theme="@style/PushSwitch"
-        app:layout_constraintBottom_toTopOf="@+id/notification_list"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.834"
-        app:layout_constraintStart_toEndOf="@+id/push_notification"
-        app:layout_constraintTop_toBottomOf="@+id/line1" />
+        <Switch
+            android:id="@+id/push_switch"
+            android:layout_width="0dp"
+            android:layout_height="10dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginRight="0dp"
+            android:layout_toRightOf="@id/push_notification"
+            android:checked="false"
+            android:theme="@style/PushSwitch" />
 
-    <Button
-        android:id="@+id/notification_list"
-        style="@style/Widget.AppCompat.Button.Borderless"
+    </RelativeLayout>
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="14dp"
-        android:backgroundTint="@color/white"
-        android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
-        android:paddingLeft="0dp"
-        android:text="알림목록"
-        android:textAlignment="textStart"
-        android:textColor="@color/black"
-        android:textSize="15dp"
-        app:layout_constraintBottom_toTopOf="@+id/appinfo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/push_switch" />
-
-
-    <TextView
-        android:id="@+id/appinfo"
-        android:layout_width="68dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="9dp"
-        android:text="앱 정보"
-        android:textColor="@color/darkgrey"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/line2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/notification_list" />
-
-    <View
-        android:id="@+id/line2"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_marginBottom="135dp"
-        android:background="@color/app_blue"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appinfo" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_weight="1">
 
     <Button
         android:id="@+id/GoToMain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/app_blue"
+        android:layout_marginBottom="-30dp"
         android:text="다음"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/line2" />
+        android:layout_gravity="center" />
+    </LinearLayout>
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
