--- a/app/src/main/res/layout/activity_bulletin.xml
+++ b/app/src/main/res/layout/activity_bulletin.xml
@@ -54,6 +54,28 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <TextView
+                android:id="@+id/bulletinLike"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="110dp"
+                android:layout_marginTop="10dp"
+                android:text="12345" />
+
+            <Button
+                android:id="@+id/btn_LikePost"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:text="Like" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
             <Button
                 android:id="@+id/btn_delpost"
                 android:layout_width="wrap_content"
@@ -70,6 +92,6 @@
                 android:layout_marginTop="10dp"
                 android:text="Modify" />
         </LinearLayout>
-    </LinearLayout>
 
+    </LinearLayout>
 </RelativeLayout>
