--- a/app/src/main/res/layout/activity_personal_setup.xml
+++ b/app/src/main/res/layout/activity_personal_setup.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activities.SetupActivity">
+    tools:context=".activity.SetupActivity">
 
     <TextView
         android:id="@+id/wiAreUHere"
