--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activities.BoardActivity">
+    tools:context=".activity.BoardActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/community_recyclerView"
