--- a/app/src/main/res/menu/menu_option.xml
+++ b/app/src/main/res/menu/menu_option.xml
@@ -5,21 +5,22 @@
     <item
         android:id="@+id/logout"
         android:title="로그아웃"
-        app:showAsAction="never"></item>
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/goNotification"
         android:title="알림목록"
-        app:showAsAction="never"></item>
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/personalSettings"
         android:title="개인설정"
-        app:showAsAction="never"></item>
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/WiFiRegister"
         android:title="와이파이 등록하기"
-        app:showAsAction="never"></item>
+        android:icon="@drawable/ic_star"
+        app:showAsAction="ifRoom" />
 
 </menu>
