--- a/app/src/main/res/layout/activity_add_memo.xml
+++ b/app/src/main/res/layout/activity_add_memo.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.memo.AddMemoActivity">
+    tools:context=".ui.memo.AddMemoActivity"
+    >
 
+    <include layout="@layout/toolbar" />
 
     <EditText
         android:id="@+id/add_title_memo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar"
         android:hint="이곳에 제목을 입력해주세요"
         android:paddingTop="12dp"
         android:textColor="@color/black"
