--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,17 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.BoardActivity">
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="300dp"
-        android:layout_height="50dp"/>
+<include
+    layout="@layout/toolbar"
+    />
+
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="yes"
         android:textSize="32dp"
-        android:layout_marginTop="80dp"/>
+        android:layout_marginTop="180dp"/>
 
 
     <androidx.viewpager2.widget.ViewPager2
@@ -24,6 +25,7 @@
         android:layout_height="match_parent"
         android:background="@color/white"
         app:layout_anchor="@+id/viewpager"
+        android:layout_marginTop="50dp"
         app:layout_anchorGravity="center">
 
     </androidx.viewpager2.widget.ViewPager2>
