--- a/app/src/main/res/layout/activity_bulletin.xml
+++ b/app/src/main/res/layout/activity_bulletin.xml
@@ -33,52 +33,46 @@
         <TextView
             android:id="@+id/bulletinBody"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="450dp"
             android:paddingLeft="15dp"
             android:paddingTop="20dp"
             android:text="Body"
+            android:background="@drawable/blue_border"
             android:textColor="@color/black"
             android:textSize="20dp" />
 
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            >
+        <Button
+            android:id="@+id/btn_delpost"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/ic_baseline_restore_from_trash_24"
+            />
+        <Button
+            android:id="@+id/btn_LikePost"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/ic_baseline_favorite_24"
+            android:layout_marginLeft="127dp"
+            />
+        <TextView
+            android:id="@+id/bulletinLike"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="likes"
+            android:textColor="@color/black"
+            />
+        <Button
+            android:id="@+id/btn_modpost"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/ic_baseline_edit_24"
+            android:layout_marginLeft="100dp"
+            />
 
-            <TextView
-                android:id="@+id/bulletinLike"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="110dp"
-                android:text="12345" />
-
-            <Button
-                android:id="@+id/btn_LikePost"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:text="Like" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <Button
-                android:id="@+id/btn_delpost"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="110dp"
-                android:layout_marginTop="10dp"
-                android:text="Delete" />
-
-            <Button
-                android:id="@+id/btn_modpost"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="10dp"
-                android:text="Modify" />
         </LinearLayout>
 
     </LinearLayout>
