Spinner in toolbar

--- a/app/src/main/res/layout/activity_add_memo.xml
+++ b/app/src/main/res/layout/activity_add_memo.xml
@@ -5,12 +5,13 @@
     android:layout_height="match_parent"
     tools:context=".activity.memo.AddMemoActivity">
 
-
+    <include layout="@layout/toolbar" />
     <EditText
         android:id="@+id/add_title_memo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="이곳에 제목을 입력해주세요"
+        android:layout_marginTop="50dp"
         android:paddingTop="12dp"
         android:textColor="@color/black"
         android:textSize="20sp"
