personal 복구 UI수정 menu 오류상태

--- a/app/src/main/res/layout/activity_bulletin.xml
+++ b/app/src/main/res/layout/activity_bulletin.xml
@@ -33,7 +33,7 @@
         <TextView
             android:id="@+id/bulletinBody"
             android:layout_width="match_parent"
-            android:layout_height="470dp"
+            android:layout_height="490dp"
             android:paddingLeft="15dp"
             android:paddingTop="20dp"
             android:text="Body"
@@ -49,12 +49,14 @@
             android:id="@+id/btn_delpost"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/ic_baseline_restore_from_trash_24"
             />
         <Button
             android:id="@+id/btn_LikePost"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/ic_baseline_favorite_24"
             android:layout_marginLeft="110dp"
             />
@@ -71,6 +73,7 @@
             android:id="@+id/btn_modpost"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/ic_baseline_edit_24"
             android:layout_marginLeft="100dp"
             />
