--- a/app/src/main/res/layout/activity_add_memo.xml
+++ b/app/src/main/res/layout/activity_add_memo.xml
@@ -5,7 +5,14 @@
     android:layout_height="match_parent"
     tools:context=".activity.memo.AddMemoActivity">
 
-    <include layout="@layout/toolbar" />
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/sky_blue"
+        app:titleTextColor="@color/white"/>
     <EditText
         android:id="@+id/add_title_memo"
         android:layout_width="match_parent"
