--- a/app/src/main/res/layout/memo_layout.xml
+++ b/app/src/main/res/layout/memo_layout.xml
@@ -33,14 +33,8 @@
                     android:paddingRight="10dp"
                     android:text="This is memo"
                     android:textColor="@color/black"
-                    android:textSize="20sp" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0"
-                    android:src="@drawable/ic_baseline_more_vert_24" />
-
+                    android:textSize="20sp"
+                    />
 
             </LinearLayout>
 
